--- a/public/index.html
+++ b/public/index.html
@@ -3,26 +3,26 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Abdullah Ch  is a Full Stack Developer, Public Speaker, and a student mentor. Abdullah is also an AWS Community Builder, Microsoft Learn Student Ambassador and former Google Developers Student Club Lead at IYU">
+    <meta name="description" content="Abdul Mueed is a Full Stack Developer, Public Speaker, and a student mentor. Abdul is also an AWS Community Builder, Microsoft Learn Student Ambassador and former Google Developers Student Club Lead at IYU">
     <meta
       name="author"
-      content="Abdullah Ch"
+      content="Abdul Mueed"
     />
-    <meta name="keywords" content="mern,react,fullstack,developer,programmer,designer,muhammad,Abdullah,therealmvp,entrepreneuer,freelancer">
+    <meta name="keywords" content="mern,react,fullstack,developer,programmer,designer,muhammad,Abdul,therealmvp,entrepreneuer,freelancer">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://abdullahch.dev/">
-    <meta property="og:title" content="Abdullah Ch ">
-    <meta property="og:description" content="Abdullah Ch  is a Full Stack Developer, Public Speaker, and a student mentor. Abdullah is also an AWS Community Builder, Microsoft Learn Student Ambassador and former Google Developers Student Club Lead at IYU">
+    <meta property="og:url" content="https://abdulmueed.dev/">
+    <meta property="og:title" content="Abdul Mueed">
+    <meta property="og:description" content="Abdul Mueed is a Full Stack Developer, Public Speaker, and a student mentor. Abdul is also an AWS Community Builder, Microsoft Learn Student Ambassador and former Google Developers Student Club Lead at IYU">
     <meta property="og:image" content="./favicon.png">
     <meta property="og:site_name" content="Portfolio Site" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://abdullahch.dev/">
-    <meta property="twitter:title" content="Abdullah Ch ">
-    <meta property="twitter:description" content="Abdullah Ch is a Full Stack Developer, Public Speaker, and a student mentor. Abdullah is also an AWS Community Builder, Microsoft Learn Student Ambassador and former Google Developers Student Club Lead at IYU">
+    <meta property="twitter:url" content="https://abdulmueed.dev/">
+    <meta property="twitter:title" content="Abdul Mueed">
+    <meta property="twitter:description" content="Abdul Mueedis a Full Stack Developer, Public Speaker, and a student mentor. Abdul is also an AWS Community Builder, Microsoft Learn Student Ambassador and former Google Developers Student Club Lead at IYU">
     <meta property="twitter:image" content="./favicon.png">
 
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
@@ -31,7 +31,7 @@
     <meta name="msapplication-TileImage" content="/favicon.png">
     <meta name="theme-color" content="#000000"> 
     
-    <link rel="canonical" url="https://abdullahch.dev/">
+    <link rel="canonical" url="https://abdulmueed.dev/">
     <link rel="manifest" href="manifest.json" />
 
     <link
@@ -52,7 +52,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Abdullah Ch</title>
+    <title>Abdul Mueed</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
